--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div id="logoholder">
-	<img src="pics/AD_logo1.png" width="130px" height="130px">
+	<img src="pics/logomain.png" width="130px" height="130px">
 </div>
 
 <div id="tagholder">
