--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <title> Avishek De</title>
 <meta name="author" content="Avishek De">
+<link href='http://fonts.googleapis.com/css?family=Cinzel+Decorative:700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="styles/normalize.css">
 <link rel="stylesheet" type="text/css" href="styles/hint.css"> <!-- For Hovering Tooltips -->
 <link rel="stylesheet" type="text/css" href="styles/style1.css">
@@ -11,16 +12,35 @@
 <body>
 
 <div id="logoholder">
-	<img src="pics/logomain.png" width="130px" height="130px">
+	<a href="index.html"><img src="pics/logomain.png" width="130px" height="130px"></a>
 </div>
 
 <div id="tagholder">
-	<div id="aboutme" class="btag" style="top:80px; left:40px;"> <span class="btagtext"> About Me </span></div>
-	<div id="apps" class="btag" style="top:80px; left:172px;"> <span class="btagtext"> Apps </span></div>
-	<div id="blogs" class="btag" style="top:80px; left:304px;"> <span class="btagtext"> Blogs </span></div>
-	<div id="gallery" class="btag" style="top:80px; left:436px;"> <span class="btagtext"> Gallery </span></div>
-	<div id="contact" class="btag" style="top:80px; left:568px;"> <span class="btagtext"> Contact </span></div>
-	<div id="feedback" class="btag" style="top:80px; left:700px;"> <span class="btagtext"> Feedback </span></div>
+	<a href="about.html"><div id="aboutme" class="btag" style="top:80px; left:40px;"> <span class="btagtext"> About Me </span></div></a>
+	<a href="apps.html"><div id="apps" class="btag" style="top:80px; left:172px;"> <span class="btagtext"> Apps </span></div></a>
+	<a href="blogs.html"><div id="blogs" class="btag" style="top:80px; left:304px;"> <span class="btagtext"> Blogs </span></div></a>
+	<a href="gallery.html"><div id="gallery" class="btag" style="top:80px; left:436px;"> <span class="btagtext"> Gallery </span></div></a>
+	<a href="contact.html"><div id="contact" class="btag" style="top:80px; left:568px;"> <span class="btagtext"> Contact </span></div></a>
+	<a href="feedback.html"><div id="feedback" class="btag" style="top:80px; left:700px;"> <span class="btagtext"> Feedback </span></div></a>
+</div>
+
+<div id="mainpagewriteup">
+	<span id="namemain">Avishek De</span>
+	<br>
+	<span id="wutext">
+	Myself , Avishek De , am a student currently pursuing B.Tech in Electrical Engineering at IIT-Roorkee.
+	From Kolkata, West Bengal, I am also an amateur Programmer and Web Designer. Working with SDSLabs-IIT Roorkee, I have been able to delve into this preferred field of interest of mine. With a deep love for various kinds of sports and a fact that I am a football fanatic, Music and Movies also amuse me much.<br>
+	I welcome you all to my website. Read on.. 
+	</span>
+</div>
+
+<div id="mainpicdiv">
+</div>
+
+<div id="bottombar">
+	<span id="movedownmain">
+	&copy &nbsp Avishek De 2014 <br>
+	Best viewed in Google Chrome ver 12.0 and above and Mozilla Firefox ver 25.0 and above in 1366 x 768 resolution </span>
 </div>
 
 
