--- a/apps.html
+++ b/apps.html
@@ -2,7 +2,7 @@
 <head>
 	<title>Apps-Avishek De</title>
 	<meta name="author" content="Avishek De">
-	<meta name="charset" content="utf-8">
+	<meta charset="utf-8">
 	<link href='http://fonts.googleapis.com/css?family=Cinzel+Decorative:700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="styles/normalize.css">
 	<link rel="stylesheet" type="text/css" href="styles/tooltip.css">
