Established connection of feedback page to database

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <title> Avishek De</title>
 <meta name="author" content="Avishek De">
+<meta charset="utf-8">
 <link href='http://fonts.googleapis.com/css?family=Cinzel+Decorative:700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="styles/normalize.css">
 <link rel="stylesheet" type="text/css" href="styles/style1.css">
