* Added blank pages for gallery and about me * designed first blog page

--- a/blogs/iitroorkee.html
+++ b/blogs/iitroorkee.html
@@ -6,7 +6,6 @@
 		<meta name="author" content="Avishek De">
 		<link href='http://fonts.googleapis.com/css?family=Cinzel+Decorative:700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="styles/styleb1.css">
-		<link rel="stylesheet" type="text/css" href="styles/style1.css">
 		<script type="text/javascript" src="js/facebooksdk.js"></script>
 	</head>
 
@@ -15,9 +14,93 @@
 			<a href="index.html"><img src="pics/logomain.png" width="130px" height="130px"></a>
 		</div>
 
-		<div id="socialbuttons">
+		<div id="heading">
+			 Why should you join IIT-Roorkee?
+		</div>
+
+		<div id="maincontent">
+			<section id="writeup">
+				<span class="head">Reasons you should join:</span><br>
+<ol>
+<li> The oldest technical university of Asia. Established in the year 1847, and converted to an IIT in 2001, IIT-Roorkee boasts of having one of the largest alumni networks and worldwide recognition.<br>
+
+<iframe id="video" width="560" height="315" src="//www.youtube.com/embed/gUu-siay5Io" frameborder="0" allowfullscreen></iframe></li>
+
+
+<li> Before 2001, when it was known as University of Roorkee, the Roorkee Entrance Exam (REE), which used to be the gateway into this college was the most sought-after exam after IITJEE.<br></li>
+<li> Ranked 6th all over India, and among the top 7 IITs, IIT-Roorkee sees one of the best placement records. Placements for the session 2013-2014 has been amazingly good, and is at par with the top 5 IITs if not better in certain departments.<br>
+<span id="s2"><a href="assets/IITRplacements.docx" download>Download the placement scenario here</a></span><br></li>
+
+<li> A pristine and beautiful campus – testament to the legacy this college holds.<br></li>
+
+<li>No other college can talk about a Main Building like the one at IIT-Roorkee, a symbol of grandeur.<br></li>
+
+<li>Enjoyable climate: People loving winters can rest assured that the temperature drops down as low as 2-3 degrees in the winter which lasts around 3-4 months here. Very less humidity during Summers make them bearable.<br></li>
+
+<li> The Central Library at IITR is magnificent and one of the largest in India and is a repository for over 3.5 lakh printed books, e-books, journals, magazines and what not.<br></li>
+
+<li>A strategic curriculum that divides courses for various branches right from 1st sem.Departmental courses get introduced 2nd sem onwards. It is the only IIT where branch change opportunity is given right after the FIRST SEMESTER.<br></li>
+
+<li> Single rooms for students from second year onwards. For CSE/ECE/most EE students single rooms are available first-year onwards.<br></li>
+
+<li>All the Hostels are getting converted to LAN from WiFi from 2014-15 Autumn Semester onwards, which ensures superfast download speeds. You will never want to go home again.!<br></li>
+
+<li>A completely ZERO RAGGING CAMPUS. One of the very few IITs where there is absolutely no ragging by seniors on campus.<br></li>
+
+<li> The entire IIT has switched over to Solar Energy for power backup for Lighting circuits and is one of the most eco-friendly colleges in India.<br></li>
+
+<li> IITR has one of the best girl-to-boy ratio among IITs (which is still very low, though!)<br></li>
+
+<li> Thomso, the glamorous annual Cultural Fest, and Cognizance , the annual technical fest which happens to be the second largest in Asia (source: Wikipedia) (I ,personally, was much disappointed with Cognizance 2014.)<br></li>
+
+<li>Owing to its location in the foothills of Himalayas, trips happen to be a part of our life here at IITR. The sheer number of places to visit at a short distance from the campus makes it one of enviable colleges in India. You are not a B.Tech from IITR unless you have been to overnight camps, sudden night-outs, Rafting down the Ganges, Mountaineering, trekking expeditions, Rappeling, Kayaking, Hiking with friends and much more..
+<br></li>
+
+<li>IITR boasts of being one of the few IITs which has a Boat Club and Himalayan Explorer's Club (HEC) which engages students in all types of adventure sports and other activities. Students are allowed to take their Proficiency as HEC from 2nd year onwards.<br></li>
+
+<li>IIT-Roorkee has some of the best sports facilities in India. It has 3 sports stadiums. Sports include cricket, football, volleyball, basketball, hockey, swimming, badminton, tennis, squash, table-tennis, , taekwondo, karate and yoga. IITR womens team has been the champions at the inter-IIT sports meet for the last 3 Years.<br></li>
+
+<li> Occassional Movie Screenings, in the Convocation Hall, which gives you a hall-like feeling as you get to watch it with all your friends.<br></li>
+</ol>
+
+<span class="head"> Reasons why you should think of colleges other than IIT-Roorkee.</span><br>
+<ol>
+<li> Since it is located in the small town of Roorkee, city life cannot be expected. There are no shopping malls at Roorkee and no good cinemas, the nearest being Wave Cinemas at Pentagon Mall, Haridwar around 20 kms from Roorkee.</li><br>
+
+<li> Mess Food- If you are a Non-Vegetarian then you should be avoiding this place as all the hostels provide Veg Food here. That said, the food is disastrous and tasteless. I would say that this is the most serious issue with IIT-Roorkee.</li><br>
+
+<li> Hostel internet facilities provided through WiFi are poor as of now. However, as all the hostels get converted to LAN from 2014-2015 session, this problem would be mostly solved.</li><br>
+
+<li> Roorkee doesnt fall under any important railway routes in India, and therefore students mostly travel via New Delhi.</li><br>
+
+<li> Girls in boys hostels or vice-versa at any time of the day is strictly prohibited in the campus.</li><br>
+
+<li>Female students are not allowed to stay outside their hostel premises after 10pm at night (9pm for freshers).</li>
+</ol>
+</section>
+
+<div id="socialdiv">
+
+<div class="fb-like" data-href="https://www.facebook.com/gunneravishek" data-width="150" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
+
+<div class="fb-share-button" data-href="https://avishekde.comeze.com/blogs/iitroorkee.html" data-width="500" data-type="button_count"></div>
+
+<a href="https://twitter.com/share" class="twitter-share-button" data-via="wild_avishek">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+<a href="https://twitter.com/wild_avishek" class="twitter-follow-button" data-show-count="false">Follow @wild_avishek</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+</div>
+
 			
-		</div>	
+		</div>
+
+		<div id="bottombar">
+			<span id="movedownmain">
+			&copy &nbsp Avishek De 2014 <br>
+			Best viewed in Google Chrome ver 12.0 and above and Mozilla Firefox ver 25.0 and above in 1366 x 768 resolution </span>
+		</div>
 	</body>
 
 </html>
