Added validation for forms

--- a/contact.html
+++ b/contact.html
@@ -44,9 +44,9 @@
 
 		<div id="requestdiv">
 			<form id="phone" method="post" action="processphone.php">
-				<input type="text" name="name" placeholder="Enter your Name"><br>
-				<input type="text" name="mobile" placeholder="Enter your Mobile Number"><br>
-				<input type="text" name="reason" placeholder="Enter reason for contacting"><br>
+				<input type="text" name="name" placeholder="Enter your Name" required> <br>
+				<input type="text" name="mobile" placeholder="Enter your Mobile Number" required> <br>
+				<input type="text" name="reason" placeholder="Enter reason for contacting" required> <br>
 				<span style="font-weight: 700;color: black;"><input type="submit" value="Submit"></span><br>
 			</form>
 		</div>
