--- a/feedback.html
+++ b/feedback.html
@@ -34,8 +34,9 @@
 		<section id="formarea">
 			Please fill in the following information:
 				<form method="post" action="processfeedback.php">
-					<input id="name" name="name" type="text" placeholder="Enter your name" style="height:35px;" class="fbox"><br>
-					<input id="email" name="email" type="text" placeholder="Enter your E-mail ID" style="height:35px;" class="fbox"><br>
+					<input id="name" name="name" type="text" placeholder="Enter your name" style="height:35px;" class="fbox" required> <br>
+					<input id="email" name="email" type="text" placeholder="Enter your E-mail ID" style="height:35px;" class="fbox" required><br>
+					
 					<textarea id="feedback" name="feedback" rows="5" placeholder="Enter your feedback" class="fbox"></textarea><br>
 					Rate the website on a scale of 10:<br><br>
 					
